[gd_scene load_steps=3 format=2]

[ext_resource path="res://FlowChart/assets/Chart_font_theme.tres" type="Theme" id=1]
[ext_resource path="res://FlowChart/FlowChart.gd" type="Script" id=2]

[node name="FlowChart" type="PanelContainer"]
margin_right = 175.0
margin_bottom = 135.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 168.0
margin_bottom = 128.0

[node name="Line2D" type="Line2D" parent="Panel"]
width = 1.0
texture_mode = 0

[node name="TitleVBox" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="Panel/TitleVBox"]
margin_right = 161.0
margin_bottom = 16.0
text = "Market charts"
align = 1

[node name="XAxisMargin" type="MarginContainer" parent="Panel/TitleVBox"]
margin_top = 105.0
margin_right = 161.0
margin_bottom = 121.0
size_flags_vertical = 10

[node name="XAxisHBox" type="HBoxContainer" parent="Panel/TitleVBox/XAxisMargin"]
margin_right = 161.0
margin_bottom = 16.0

[node name="XFirstValue" type="Label" parent="Panel/TitleVBox/XAxisMargin/XAxisHBox"]
margin_right = 138.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = "X1"

[node name="XLastValue" type="Label" parent="Panel/TitleVBox/XAxisMargin/XAxisHBox"]
margin_left = 142.0
margin_right = 161.0
margin_bottom = 16.0
text = "X2"

[node name="TestTimer" type="Timer" parent="."]
wait_time = 0.08
[connection signal="timeout" from="TestTimer" to="." method="_on_Timer_timeout"]
